2007-06-17  Yevgen Muntyan  <muntyan@tamu.edu>

	Added 'author' and 'description' tags to style scheme files.
	Renamed style scheme files from "*.styles" to "*.xml" to make
	intltool happy.

	* gtksourceview/gtksourcestylescheme.c: parse new tags; use libxml
	parser instead of GMarkup.
	* gtksourceview/language-specs/gvim.styles:
	* gtksourceview/language-specs/gvim.xml:
	* gtksourceview/language-specs/kate.styles:
	* gtksourceview/language-specs/kate.xml: renamed and added new tags.
	* gtksourceview/language-specs/check.sh:
	* gtksourceview/language-specs/Makefile.am: renamed scheme files.
	* gtksourceview/gtksourcestylemanager.c: look for "*.xml" files now.

	* gtksourceview/gtksourcelanguagemanager.c: little bit of docs.

	* po/POTFILES.in: removed gtksourceprintjob.c and eggregex.c, added
	style scheme files.

2007-06-17  Yevgen Muntyan  <muntyan@tamu.edu>

	Continuing great relicensing.

	* README: updated the paragraph about licenses.

	* gtksourceview/language-specs/sql.lang:
	* gtksourceview/language-specs/dpatch.lang:
	* gtksourceview/language-specs/javascript.lang:
	* gtksourceview/language-specs/diff.lang:
	* gtksourceview/language-specs/dtd.lang:
	* gtksourceview/language-specs/po.lang:
	* gtksourceview/language-specs/ini.lang:
	* gtksourceview/language-specs/docbook.lang:
	* gtksourceview/language-specs/ruby.lang:
	* gtksourceview/language-specs/python.lang:
	* gtksourceview/language-specs/c.lang:
	* gtksourceview/language-specs/kate.styles:
	* gtksourceview/language-specs/php.lang:
	* gtksourceview/language-specs/gtk-doc.lang:
	* gtksourceview/language-specs/spec.lang:
	* gtksourceview/language-specs/scheme.lang:
	* gtksourceview/language-specs/libtool.lang:
	* gtksourceview/language-specs/pkgconfig.lang:
	* gtksourceview/language-specs/verilog.lang:
	* gtksourceview/language-specs/desktop.lang:
	* gtksourceview/language-specs/texinfo.lang:
	* gtksourceview/language-specs/latex.lang:
	* gtksourceview/language-specs/vbnet.lang: