@@ -1,3 +1,10 @@
+2007-06-18  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/gtksourcelanguage.h:
+	* gtksourceview/gtksourceview.h:
+
+	add some ABI padding.
+
 2007-06-17  Yevgen Muntyan  <muntyan@tamu.edu>
 
 	Added 'author' and 'description' tags to style scheme files.
